# thalmetis-edr

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: figure5a-interpolation.md  future-event-history.md  model-boundaries.md  pinchoff-viability-estimate.md  references.md  table3-bubble-radius-interpolation.md  table3-reconciliation.md  v0.1-release-readiness.md  v0.2-release-readiness.md
examples/: pinchoff_viability_sensitivity.py  table3_sensitivity.py
notebooks/: 01_reproduce_mcrae_2024_table3.ipynb
src/thalmetis_edr/: __init__.py  affected_volume.py  bubble_radius.py  bubbles.py  exposure.py  pinchoff.py  results.py  tables.py  units.py  viability.py
src/thalmetis_edr/data/: mcrae_2024_figure5a_bub80compare9_volumes.csv  mcrae_2024_table3_inferred_radii.csv  mcrae_2024_table3_published.csv
src/thalmetis_edr/published/: __init__.py  mcrae_2024.py  walls_2017.py
tests/: test_affected_volume.py  test_bubble_radius.py  test_bubbles.py  test_exposure.py  test_pinchoff.py  test_results.py  test_scope_boundaries.py  test_table3.py  test_units.py  test_viability.py
