[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thalmetis-edr"
version = "0.2.0"
description = "Bounded McRae 2024 Figure 5a/Table 3 reconstruction, interpolation, and pinch-off sensitivity estimates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Oliver McRae" },
]
keywords = [
  "affected volume",
  "energy dissipation rate",
  "microbubble",
  "pinch-off",
  "reproducibility",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/thalmetis/thalmetis-edr"
Repository = "https://github.com/thalmetis/thalmetis-edr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thalmetis_edr = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
